<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnClear"
            android:layout_weight="3"
            android:layout_margin="2dp"
            android:text="@string/testClear"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnDiv"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/testDiv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn7"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num7"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num8"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num9"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnMul"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/testMul"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn4"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num4"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn5"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num5"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/num6"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnMin"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/testMin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn1"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/num1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn2"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/num2"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn3"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/num3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn0"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/num0"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnEqual"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:text="@string/testEqual"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnPlus"
                android:layout_margin="2dp"
                android:text="@string/testPlus"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>